--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="src/assets/css/blobz.min.css">
-  <link rel="shortcut icon" href="src/assets/flash.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/flash.png" type="image/x-icon">
   <title>PortFolio | Muhammad Ali Aamir</title>
 </head>
 
